plugins {
    id "architectury-plugin" version "3.4+"
    id "dev.architectury.loom" version "1.6+" apply false
}

architectury {
    minecraft = rootProject.minecraft_version
}

subprojects {
    apply plugin: "dev.architectury.loom"

    def modLoader = project.name
    def modId = rootProject.name
    def isCommon = (modLoader == "common")


    loom {
        silentMojangMappingsLicense()
    }

    repositories {
        maven {
            name "neoforgedReleases"
            url "https://maven.neoforged.net"
           }
        maven { url "https://maven.shedaniel.me" }
        maven {
            name = 'ParchmentMC'
            url = 'https://maven.parchmentmc.org'
        }
        maven {
            url "https://cursemaven.com"
        }
    }

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
        // The following line declares the mojmap mappings, you may use other mappings as well
        mappings loom.layered() {
            officialMojangMappings()
            parchment("org.parchmentmc.data:parchment-${rootProject.minecraft_version}:${rootProject.parchment_mapping_version}@zip")
        }
        if(!isCommon) {
            modImplementation("me.shedaniel:RoughlyEnoughItems-${modLoader}:${rootProject.rei_version}")

        }

        if(modLoader == "fabric") {
            //modImplementation "curse.maven:fabric-disable-custom-worlds-advice-401978:5007958"
        }
    }
}

allprojects {
    apply plugin: "java"
    apply plugin: "architectury-plugin"
    apply plugin: "maven-publish"

    archivesBaseName = rootProject.archives_base_name
    version = rootProject.mod_version
    group = rootProject.maven_group

    repositories {
        maven { url "https://maven.terraformersmc.com/releases" }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8"
        options.release.set(21)
    }

    java {
        withSourcesJar()
    }
}
